# themek

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: dart-api-client-status-2026-05-25.md  dart-api-recon-notes.md  dart-backfill-production-smoke-2026-05-27.md  dart-backfill-recon-notes.md  dart-backfill-runbook.md  dart-fetch-smoke-run-notes.md  dart-parser-robust-extraction-status-2026-05-27.md  equity-ownership-production-smoke-2026-06-01.md  eval-e5-smoke-run-notes.md  ontology-core-smoke-notes.md  vault-smoke-notes.md  walking-skeleton-smoke-run-notes.md
graph/: edges.json  nodes.json
migrations/: env.py
scripts/: random_backfill_sample.py  renamespace_segments.py  themek_backfill.sh
tests/: conftest.py  test_backfill.py  test_backfill_model.py  test_claude_cli.py  test_cli.py  test_cli_dart.py  test_cli_dart_backfill.py  test_cli_equity.py  test_cli_eval.py  test_cli_krx.py  test_cli_parser_commands.py  test_cli_vault.py  test_config.py  test_conftest_isolation.py  test_dart_cache.py  test_dart_client.py  test_dart_corp_lookup.py  test_dart_equity.py  test_dart_fetch.py  test_dart_financials.py  test_dart_parser.py  test_db_models.py  test_eval_aggregate.py  test_eval_e5_integration.py  test_eval_e5_metrics.py  test_fixture_mirror.py  test_incremental.py  test_ingest_business_report.py  test_integration_krx_backfill.py  test_krx_client.py  test_krx_sync.py  test_learned_patterns.py  test_llm_header_classification.py  test_llm_prompts.py  test_llm_schemas.py  test_migrations_chain.py  test_parser_escalation.py  test_query_e5.py  (+12 more)
(+3161 files in other folders)
