[project]
name = "themek"
version = "0.1.0"
description = "Korean theme stock ontology"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "jinja2>=3.1",
    "structlog>=24.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "httpx>=0.28.1",
    "pykrx>=1.0.45",
]

[project.scripts]
themek = "themek.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/themek"]
